--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,14 @@ services:
     restart: always
     ports:
       - 7878:3000
+    volumes:
+      - ./runtime:/app/runtime
     environment:
       - TZ=${TZ:-Asia/Shanghai}                         #时区
       - PORT=${PORT:-3000}                              #服务端口
+      #数据库配置
+      - DATABASE_DEFAULT_DRIVER=${DATABASE_DEFAULT_DRIVER:-sqlite}
+      - DATABASE_DEFAULT_NAME=${DATABASE_DEFAULT_NAME:-runtime/hello_email_tool.sqlite}
       #SMTP邮件配置
       - SMTP_HOST=${SMTP_HOST:-smtp.example.com}
       - SMTP_PORT=${SMTP_PORT:-587}
